--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/gradient_radial_control1"
     tools:context=".MainActivity"
-    android:id="@+id/drawerLayout"
     android:fitsSystemWindows="true">
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:text="@string/sign_in"
+        android:textColor="@color/white"
+        android:textSize="46sp"
+        android:textAlignment="center"
+        android:layout_marginTop="70dp"
+        android:id="@+id/sign_in_view"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+    </TextView>
+    
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/username_edit"
+        android:background="#30ffffff"
+        android:layout_below="@id/sign_in_view"
+        android:hint="@string/username"
+        android:textColor="@color/white"
+        android:textColorHint="#70ffffff"
+        android:layout_margin="40dp"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:drawableStart="@drawable/ic_baseline_perm_identity_24">
+    </EditText>
 
-        <include
-            layout="@layout/navigation_action_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/userpassword_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/username_edit"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
+        android:background="#30ffffff"
+        android:hint="@string/password"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="#70ffffff"
+        android:textSize="24sp"
+        android:drawableStart="@drawable/ic_baseline_lock_24"
+        android:inputType="textPassword">
 
-        </include>
+    </EditText>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/main_layout"
-
-
-            android:textAlignment="center"
-            android:textSize="24sp"
-            tools:ignore="RtlCompat" />
-
-        <TextView
-            android:id="@+id/testView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello, welcome \nto my app!"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:textColor="@color/teal_200"
-            android:textSize="40sp" />
-
-    </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:menu="@menu/navigation_menu"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/header_layout"
-        android:id="@+id/nav_view">
+        android:layout_height="wrap_content"
+        android:id="@+id/login_btn"
+        android:layout_below="@+id/userpassword_edit"
+        android:text="@string/login"
+        android:textSize="20sp"
+        android:backgroundTint="@color/teal_700"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:layout_margin="20dp">
 
-    </com.google.android.material.navigation.NavigationView>
+    </Button>
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
