--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -50,6 +50,7 @@
         </EditText>
 
         <EditText
+            android:inputType="number"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -64,6 +65,7 @@
         </EditText>
 
         <EditText
+            android:inputType="number"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
