--- a/app/src/main/res/layout/activity_item_overview.xml
+++ b/app/src/main/res/layout/activity_item_overview.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/item_overview_layout"
     tools:context=".ItemOverview">
 
     <include
@@ -33,23 +34,48 @@
 
     </TextView>
 
-
     <TextView
+        android:id="@+id/overview_textview_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nav_line"
-        android:text="Name:"
-        android:textSize="24sp"
-        android:layout_marginTop="35dp"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="35dp"
+        android:text="ID:"
+        android:textSize="24sp">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/overview_textview_id_none"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nav_line"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="35dp"
+        android:layout_toEndOf="@id/overview_textview_id"
+        android:text="@string/none"
+        android:textSize="24sp">
+
+    </TextView>
+
+
+    <TextView
         android:id="@+id/overview_textview_name"
-    >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/overview_textview_id"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="35dp"
+        android:text="Name:"
+        android:textSize="24sp">
+
     </TextView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nav_line"
+        android:layout_below="@+id/overview_textview_id_none"
         android:text="@string/none"
         android:textSize="24sp"
         android:layout_marginTop="35dp"
@@ -85,16 +111,14 @@
     </TextView>
 
     <TextView
+        android:id="@+id/overview_textview_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/overview_textview_amount"
-        android:text="Price:"
-        android:textSize="24sp"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="35dp"
-        android:id="@+id/overview_textview_price"
-        >
-    </TextView>
+        android:layout_marginTop="40dp"
+        android:text="Price($)of each:"
+        android:textSize="24sp"></TextView>
 
     <TextView
         android:layout_width="wrap_content"
@@ -110,16 +134,14 @@
     </TextView>
 
     <TextView
+        android:id="@+id/overview_textview_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/overview_textview_price"
-        android:text="Data Added:"
-        android:textSize="24sp"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="35dp"
-        android:id="@+id/overview_textview_date"
-        >
-    </TextView>
+        android:layout_marginTop="40dp"
+        android:text="Data Added:"
+        android:textSize="24sp"></TextView>
 
     <TextView
         android:layout_width="wrap_content"
@@ -134,18 +156,43 @@
         >
     </TextView>
 
-    <androidx.appcompat.widget.AppCompatButton
+    <TextView
+        android:id="@+id/overview_textview_total_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/overview_textview_date"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="40dp"
+        android:text="Total price($):"
+        android:textSize="24sp">
 
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/overview_textview_date_none"
+        android:text="@string/none"
+        android:textSize="24sp"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="35dp"
+        android:layout_toEndOf="@id/overview_textview_date"
+        android:id="@+id/overview_textview_total_price_none"
+        >
+    </TextView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/delete_btn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="- DELETE ITEM"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:background="@drawable/round_button_red"
-
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40sp">
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40sp"
+        android:background="@drawable/round_button_red"
+        android:text="- DELETE ITEM"
+
+        android:textColor="@color/white"
+        android:textSize="18sp">
 
 
     </androidx.appcompat.widget.AppCompatButton>
